# tg_lab

./: .gitignore  CHANGELOG.md  README.md  environment.yml  ion_signals.csv  pyproject.toml  setup.cfg  setup.py
src/tg_lab/: __init__.py  utils.py
src/tg_lab/ion_event_counting/: fastvimprocess.py  plot.py
src/tg_lab/ion_integration/: cli.py
src/tg_lab/ion_signals/: cli.py  compute.py
src/tg_lab/tis_camera/: cli.py  image_acquisition.py
src/tg_lab/tof/: __init__.py  constants.py  data_utils.py  file_utils.py  tof_data.py
