[metadata]
name = tg_lab
version = 0.0.1
author = Gary Chen
author_email = gary.kj.chen@gmail.com
description = software suite for Tiangang lab

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >= 3.10

[options.packages.find]
include = 
    tg_lab*
where = src

[options.package_data]
* =
    py.typed

[options.entry_points]
console_scripts =
    ion-signals = tg_lab.ion_signals.cli:entry_point
